# ASIC_Counter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
asic_counter/: commands.py  executor.py  protocol.py  test_runner.py  top.py
tests/decoder/: test_decoder.py
tests/encoder/: test_encoder.py
tests/protocol/: test_protocol.py
